--- a/src/components/css/CardMeasurement.css
+++ b/src/components/css/CardMeasurement.css
@@ -5,12 +5,12 @@
   margin: 3%;
   padding: 3px;
   background-color: #fff;
-  box-shadow: 0px 0px 15px 5px #55555544;
+  box-shadow: 0px 0px 15px 3px #55555544;
   border-radius: 20px;
 }
 
-.card:hover{
-  box-shadow: 0px 0px 20px 2px #e6003144;
+.card:hover:hover {
+  box-shadow: 0px 0px 15px 3px #a1535399;
 }
 
 .card-left {
@@ -54,17 +54,17 @@
 }
 
 .card-right-block-rows {
+  display: flex;
   flex: 1;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  margin-top: 10px;
+  justify-content: space-evenly;
 }
 
 .card-right-block-row {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  margin-left: 20px;
 }
 
 .card-right-block-row p {
@@ -73,7 +73,7 @@
 
 .card-right-block-date {
   padding-top: 8px;
-  padding-left: 45%;
+  padding-left: 40%;
 }
 
 .card-right-block-row-line {
@@ -90,4 +90,194 @@
   height: 80%;
   width: 1px;
   background-color: #252525;
+}
+
+@media screen and (max-width: 960px) {
+  .card {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    margin: 3%;
+    padding: 3px;
+    background-color: #fff;
+    box-shadow: 0px 0px 15px 3px #55555544;
+    border-radius: 20px;
+  }
+
+  .card:hover:hover {
+    box-shadow: 0px 0px 15px 3px #a1535399;
+  }
+
+  .card-left {
+    display: block;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    height: 300px;
+    width: 250px;
+  }
+
+  .image {
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+  }
+
+  .card-right {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    padding: 10px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+  }
+
+  .card-icon {
+    display: flex;
+    flex-direction: column;
+    width: 100px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+    margin-top: 5px;
+    color: #252525;
+  }
+
+  .card-right-block {
+    display: flex;
+    flex: 1;
+  }
+
+  .card-right-block-rows {
+    display: table;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+  }
+
+  .card-right-block-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 20px;
+  }
+
+  .card-right-block-row p {
+    margin-left: 10px;
+  }
+
+  .card-right-block-date {
+    padding-top: 8px;
+    padding-left: 20%;
+  }
+
+  .card-right-block-row-line {
+    width: 90%;
+    align-self: center;
+    height: 1px;
+    background-color: #252525;
+  }
+
+  .card-right-block-column-line {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    height: 80%;
+    width: 1px;
+    background-color: #252525;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .card {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    margin: 3%;
+    padding: 3px;
+    box-shadow: 0px 0px 15px 3px #55555544;
+    border-radius: 20px;
+  }
+
+  .card:hover:hover {
+    box-shadow: 0px 0px 15px 3px #a1535399;
+  }
+
+  .card-left {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    height: 250px;
+    width: 100%;
+  }
+
+  .image {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+  }
+
+  .card-right {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    border-radius: 20px;
+  }
+
+  .card-icon {
+    display: flex;
+    flex-direction: column;
+    width: 20px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+    margin-top: 5px;
+    color: #252525;
+  }
+
+  .card-right-block {
+    display: flex;
+    flex: 1;
+  }
+
+  .card-right-block-rows {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5px;
+  }
+
+  .card-right-block-row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card-right-block-row p {
+    margin-left: 10px;
+  }
+
+  .card-right-block-date {
+    padding-top: 8px;
+  }
+
+  .card-right-block-row-line {
+    width: 100%;
+    align-self: center;
+    height: 1px;
+    background-color: #252525;
+  }
+
+  .card-right-block-column-line {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    height: 90px;
+    width: 1px;
+    margin-left: 30px;
+    background-color: #252525;
+  }
 }
