--- a/src/components/css/CardMeasurement.css
+++ b/src/components/css/CardMeasurement.css
@@ -9,8 +9,13 @@
   border-radius: 10px;
 }
 
-.card:hover:hover {
-  box-shadow: 0px 0px 15px 3px #a1535399;
+.card:hover {
+  box-shadow: 0px 3px 10px 3px #a1535399;
+}
+
+.card:active {
+  box-shadow: 0px 3px 10px 3px #a1535399;
+  transform: translate(2px)
 }
 
 .card-left {
