--- a/src/components/css/CardMeasurement.css
+++ b/src/components/css/CardMeasurement.css
@@ -5,17 +5,16 @@
   margin: 3%;
   padding: 3px;
   background-color: #fff;
-  box-shadow: 0px 0px 15px 3px #55555544;
+  box-shadow: 0px 0px 15px 5px #55555544;
   border-radius: 10px;
 }
 
 .card:hover {
-  box-shadow: 0px 3px 10px 3px #a1535399;
+  box-shadow: 0px 0px 10px 5px #55555599;
 }
 
 .card:active {
-  box-shadow: 0px 3px 10px 3px #a1535399;
-  transform: translate(2px)
+  transform: translateY(2px)
 }
 
 .card-left {
