--- a/src/components/css/CardMeasurement.css
+++ b/src/components/css/CardMeasurement.css
@@ -55,6 +55,7 @@
 .card-right-block {
   display: flex;
   flex: 1;
+  justify-content: center;
 }
 
 .card-right-block-rows {
@@ -77,7 +78,6 @@
 
 .card-right-block-date {
   padding-top: 8px;
-  padding-left: 40%;
 }
 
 .card-right-block-row-line {
@@ -174,7 +174,6 @@
 
   .card-right-block-date {
     padding-top: 8px;
-    padding-left: 20%;
   }
 
   .card-right-block-row-line {
@@ -249,14 +248,14 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     margin-top: 5px;
   }
 
   .card-right-block-row {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
   }
 
