*Added mobile app

--- a/src/components/pages/css/Style.css
+++ b/src/components/pages/css/Style.css
@@ -20,6 +20,11 @@
   display: none;
 }
 
+.btn {
+  background-color: "F00909";
+
+}
+
 @media screen and (max-width: 750px) {
   .container {
     margin: 0;
